# Admin-Page-Finder

./: .pre-commit-config.yaml  README.md  RVEColab.ipynb  pyproject.toml  ruff.toml
.cursor/plans/: admin-4345ba02.plan.md
.github/workflows/: ci.yml
benchmarks/: bench_scan.py
src/admin_page_finder/: cache.py  cli.py  discovery.py  http.py  logging_utils.py  rate_limit.py  scanner.py
src/admin_page_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/admin_page_finder/wordlists/: core.txt  java.txt  mega.txt  node.txt  php.txt  python.txt
tests/: test_cli.py  test_discovery.py  test_integration.py  test_scanner.py
